refactor(framework): decompose VirtualPackageMetadata into dedicated matcher and mapper components